styles.css
@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');

:root{
    --off-white-color : #d4d4d8;
    --theme-color : #164e63;
}
.container {
    margin: auto;
    padding-left: 1rem;
    padding-right: 1rem;
}


/** nav **/
.nav-top {
    background-color: var(--theme-color);
    padding: 1rem 1rem 0rem 0rem;
    color: white;
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0.5rem;
}

.brand {
    font-weight: bold;
    letter-spacing: 3px;
    font-size: larger;
    padding-left: 1rem;
    display: inline-block;
}

.nav-pills {
    text-align: right;
    letter-spacing: 3px;
    font-size: large;
    display: inline-block;
}

.nav-top li {
    display: inline-block;
    padding: 0rem 0.8rem;
    ;
}


.nav-top a {
    text-decoration: none;
    color: white
}

.nav-top .active {
    font-weight: bold;
}


.nav-bar{
    text-align: right;
    font-size: larger;
}

/** lists **/

.list-non-bullet {
    list-style: none;
    padding-inline-start: 0px;
}

.list-item-inline {
    display: inline;
    padding: 0rem 0.5rem;
}


body {
    font-family: 'Lora', serif;
    margin: 0px;
    font-size: large;
    letter-spacing: 1.8px;
}

/** header **/

.hero {
    /* padding: 0rem; */
    padding-top: 5rem;
    padding-bottom: 2rem;

}

.hero-img {
    max-width: 90%;
    width: 350px;
    display: block;
    margin: auto;
}

.blog-img {
        /* max-width: 90%; */
        width: 800px;
        display: block;
        margin: auto;
        /* padding-top: 5rem;
    padding-bottom: 2rem; */
}
.hero-heading {
    text-align: center;
    padding-top: 1rem;
    color: var(--dark-gray);
}

.heading-inverted {
    color: var(--theme-color);
}

/** sections **/

.section {
    padding: 3rem;
}

.section h1 {
    text-align: center;
    color: var(--theme-color);

}

/* .section a{
   margin: auto; 

} */

.ow {
    background-color: var(--off-white-color);
}

.container-center {
    max-width: 800px;
    /* margin: auto; */
}

.education-container{
    text-align: center;
    max-width: 900px;
    padding-inline-start: 0px;
}

.education-container li{
    list-style-type :none;
    padding: 1rem 0rem;
}
/** links **/
.link {
    box-sizing: border-box;
    text-decoration: none;
    padding: 1rem 1rem;
    text-align: center;
}

.link-primary {
    background-color: var(--theme-color);
    border-radius: 0.5rem;
    color: white;
    display: inline-block;
    max-width: 180px;
    margin: 1rem 1rem 1rem 0rem;
}

.link-secondary {
    color: var(--theme-color);
    border-radius: 0.5rem;
    border: 1px solid var(--theme-color);
    display: inline-block;
    max-width: 180px;
    margin: 1rem 1rem 1rem 0rem;
    font-weight: bold;
}

.footer {
    background-color: var(--theme-color);
    color: white;
    padding-top: 5rem;
    padding-bottom: 3rem;
    border-top-right-radius: 0.5rem;
    border-top-left-radius: 0.5rem;
    text-align: center;
}

.footer-header{
    /* font-weight: bold; */
    font-size: larger;

}

.footer ul {
    padding-inline-start: 0px;
}

footer .link{
    color: white;
    text-align: center;
    padding: 0rem;
}

footer img{
    max-width: 25px;
    max-height: 23px;
}

#check-button {
    background: var(--theme-color);
    border: none;
    color: #fff;
    padding: 0.5rem 1rem;
    border-radius: 0.5rem;
    font-size: large;
    cursor: pointer;
    outline: #fff;
    margin: auto;
    display: block;
  }

/* ------------------------------------------------ */

